<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">环保自行车助手</string>    
    
    <string name="city_name_suzhou">苏州</string>
    <string name="city_name_changshu">常熟</string>
    <string name="city_name_kunshan">昆山</string>
    <string name="city_name_nantong">南通</string>
    <string name="city_name_zhongshan">中山</string>
    <string name="city_name_shaoxing">绍兴</string>
    <string name="city_name_wujiang">吴江</string>
    <string name="city_name_wuhan">武汉</string>
    <string name="city_name_hangzhou">杭州</string>
    <string name="city_name_fuzhou">福州</string>
    
    <string name="btn_next">下一步</string>
    <string name="btn_send">发送</string>
    <string name="btn_cancel">取消</string>
    
    <string name="tab_map">地图</string>
    <string name="tab_settings">设置</string>
    <string name="tab_list">列表</string>
    <string name="tab_more">更多</string>
    
    <string name="title_map">自行车地图</string>    
    <string name="title_setting">设置</string>
    <string name="title_list">停放点列表</string>
    <string name="title_info">关于</string>
    <string name="title_select_city">选择城市</string>
    <string name="title_change_city">切换城市</string>
    <string name="title_feedback">反馈意见</string>
    <string name="title_more">更多</string>
    
    <string name="title_map_setting">地图设置</string>
    <string name="title_search_setting">查询设置</string>
    <string name="title_favorite_setting">兴趣点设置</string>
    
    <string name="map_pop_available_bicycles">可借车数: </string>
    <string name="map_pop_available_parks">可停车位: </string>
    <string name="map_pop_address">地址: </string>
    <string name="map_pop_btn_to">到这里去</string>
    <string name="map_pop_btn_from">从这里出发</string>
    
    <string name="progress_dialog_loading_msg">正在加载数据，请稍等..</string>
    
    <string name="list_progress_dialog_msg">正在更新数据，请稍等..</string>
    <string name="list_avaibike">可借车数: </string>
    <string name="list_avaipark">可停车位: </string>
    
    <string name="setting_map">地图设置</string>
    <string name="setting_return_reminder">还车提醒</string>
    <string name="setting_favorite">兴趣点设置</string>
    <string name="setting_share">分享</string>
    <string name="setting_changecity">切换城市</string>
    <string name="setting_feedback">反馈意见</string>
    <string name="setting_about">关于</string>
    <string name="setting_update">检查更新</string>
    <string name="setting_rating">去市场评分</string>
    <string name="setting_recommend">精品推荐</string>
    
    <string name="dialog_remove_ad_msg_not_enough">您当前积分为：%d分，只需消耗200积分即可消除广告30天</string>
    <string name="dialog_remove_ad_msg_enough">您当前积分为：%d分，已满足消耗200积分消除广告30天</string>
    <string name="dialog_remove_ad_btn_earn_points">赚取积分</string>
    <string name="dialog_remove_ad_btn_remove_ad">消除广告</string>
    
    <string name="map_setting_auto_locate">程序启动自动定位</string>
    <string name="map_setting_download_offline_map">下载离线地图</string>
    <string name="map_setting_show_nearest_spots">显示附近自行车点</string>
    
    <string name="map_setting_show_favorites">突出显示兴趣点</string>
    <string name="map_setting_download_offline_map_network_not_wifi_msg">地图数据太大，请在Wifi网络下下载离线地图</string>
    <string name="map_setting_download_offline_map_started">开始后台下载离线地图..</string>
    <string name="map_setting_download_offline_map_start_failed">开始后台下载离线地图失败，请稍后重试</string>
    <string name="map_setting_download_offline_map_complete">离线地图下载完成</string>
    <string name="map_setting_download_offline_map_already_downloaded">上次地图下载未完成, 本次将继续后台下载</string>
    <string name="map_setting_map_already_complete">地图已经下载完成，无需再次下载</string>
    <string name="map_setting_download_offline_map_percentage">( %d%% )</string>
    
    <string name="return_bicycle_reminder_time_label">提醒时间：</string>
    <string name="return_bicycle_reminder_time_unit">分钟</string>
    <string name="return_bicycle_reminder_dialog_title">还车提醒设置</string>
    <string name="return_bicycle_reminder_sound">响铃</string>
    <string name="return_bicycle_reminder_vibrate">震动</string>
    <string name="return_bicycle_reminder_sound_and_vibrate">响铃加震动</string>
    <string name="return_bicycle_reminder_dialog_positive_btn">开始提醒</string>
    <string name="return_bicycle_reminder_dialog_negative_btn">取消提醒</string>
    <string name="return_bicycle_reminder_cancel_dialog_btn">知道了</string>
    <string name="return_bicycle_reminder_cancel_dialog_title">关闭还车提醒</string>
    <string name="return_bicycle_reminder_cancel_dialog_msg">还车时间到了，请及时归还自行车</string>
    
    <string name="info_version_label">软件版本：</string>
    <string name="info_available_system_label">适用系统：</string>
    <string name="info_available_system">Android2.1及2.1以上操作系统</string>    
    <string name="info_copyright_en_company">Copyright © 2012 Dream Catcher Studio.</string>
    <string name="info_copyright_en_right">All Rights Reserved</string>
	<string name="info_copyright_zh">追梦人工作室版权所有</string>
	
	<string name="share_title">分享</string>
	<string name="share_message">Hi, 我刚使用了环保自行车手机客户端查看自行车站点分布，还可以实时查询各站点的自行车借还情况，真的很方便呢。你也来试试吧，在Google Play市场搜索环保自行车即可下载。</string>
	<string name="share_chooser_title">请选择分享方式</string>
	
	<string name="change_city_restart">重新加载数据</string>
	<string name="change_city_same_city_toast_msg">所选城市与当前城市相同，请重新选择</string>
	<string name="change_city_progress_dialog_msg">正在加载数据，请稍等..</string>
	<string name="change_city_reload_failed_msg">切换城市失败，请稍后重试</string>
	<string name="change_city_reload_success_msg">切换城市成功</string>
	
	<string name="exit_app_inform_msg">再按一下返回键退出程序</string>
	
	<string name="toast_msg_network_error">当前网络不可用，请设置好网络后重试</string>
	<string name="toast_msg_server_unavailable">服务器不可用，请稍后重试</string>
	<string name="toast_msg_bicycles_info_refresh_success">自行车站点信息更新成功</string>
	<string name="toast_msg_version_is_up_to_date">当前已是最新版本</string>
	<string name="toast_msg_version_is_checking">正在检测新版本，请稍后</string>
	<string name="toast_msg_version_no_market">无法进入市场，请通过电脑或其他设备进入市场</string>
	<string name="toast_msg_ad_remove_success">广告已成功消除</string>
	<string name="toast_msg_warking_router_search_failed">查询路线失败</string>
	<string name="toast_msg_searching_router">正在查询路线，请稍候</string>
	<string name="toast_msg_no_poi_result">未查询到相关结果</string>
	
	<string name="notification_ticket_text">还车时间到了</string>
	<string name="notification_content_title">还车提醒</string>
	<string name="notification_content_text">还车时间到了，请及时归还</string>
	
<<<<<<< HEAD
	<string name="feedback_edittext_hint">请把您的意见和建议发送给我们，并留下您所在的城市......</string>	
=======
	<string name="feedback_edittext_hint">请留下您的意见和建议，以及所在的城市，以方便我们为您提供更好的服务......</string>	
>>>>>>> bbf5a17979f68cfc19f54875ec20b7e72a2eec72
	<string name="progress_bar_text">获取信息</string>
	
	<string name="search_input_hint">搜索地点</string>
</resources>