<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/activity_bg"
    android:padding="5dip" >

    <TextView
        android:id="@+id/return_bicycle_reminder_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/return_bicycle_reminder_time_label"
        android:textAppearance="@style/Bicycle.TextAppearance.DarkGreySmallNormal" />

    <TextView
        android:id="@+id/return_bicycle_reminder_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/return_bicycle_reminder_time_label"
        android:textAppearance="@style/Bicycle.TextAppearance.DarkGreySmallNormal"
        android:gravity="center_vertical"
        android:text="30" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/return_bicycle_reminder_time_value"
        android:textAppearance="@style/Bicycle.TextAppearance.DarkGreySmallNormal"
        android:gravity="center_vertical"
        android:text="@string/return_bicycle_reminder_time_unit" />

    <SeekBar
        android:id="@+id/return_bicycle_reminder_seekbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/return_bicycle_reminder_time_label"
        android:layout_marginTop="5dip"
        android:indeterminate="false"
        android:max="120"
        android:progress="30" />

    <RelativeLayout
        android:id="@+id/return_bicycle_reminder_sound_line"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_below="@+id/return_bicycle_reminder_seekbar"
        android:layout_marginTop="5dip"
        android:background="@drawable/setting_listitem_bg_top"
        android:clickable="true" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="8dip"
            android:gravity="center_vertical"
            android:text="@string/return_bicycle_reminder_sound"
            android:textAppearance="@style/Bicycle.TextAppearance.DarkGreySmallNormal" />

        <ImageView
            android:id="@+id/return_bicycle_reminder_sound_image"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:src="@drawable/select_check" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/return_bicycle_reminder_vibrate_line"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_below="@+id/return_bicycle_reminder_sound_line"
        android:layout_marginTop="-1dip"
        android:background="@drawable/setting_listitem_bg_middle"
        android:clickable="true" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="8dip"
            android:gravity="center_vertical"
            android:text="@string/return_bicycle_reminder_vibrate"
            android:textAppearance="@style/Bicycle.TextAppearance.DarkGreySmallNormal" />

        <ImageView
            android:id="@+id/return_bicycle_reminder_vibrate_image"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:src="@drawable/select_check" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/return_bicycle_reminder_sound_and_vibrate_line"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_below="@+id/return_bicycle_reminder_vibrate_line"
        android:layout_marginTop="-1dip"
        android:background="@drawable/setting_listitem_bg_bottom"        
        android:clickable="true" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="8dip"
            android:gravity="center_vertical"
            android:text="@string/return_bicycle_reminder_sound_and_vibrate"
            android:textAppearance="@style/Bicycle.TextAppearance.DarkGreySmallNormal" />

        <ImageView
            android:id="@+id/return_bicycle_reminder_sound_and_vibrate_image"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:src="@drawable/select_check" />
    </RelativeLayout>

</RelativeLayout>